// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a comment when there are diffs 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should update the existing comment if it exists 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`foo\` | bar | baz |
| \`hi\` | ho | howdy |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;
